--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^9.0.0"
+  },
+  "dependencies": {
+    "animate.css": "^4.1.1"
   }
 }
